--- a/travelapp-react/package.json
+++ b/travelapp-react/package.json
@@ -8,11 +8,17 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "eases": "^1.0.8",
+    "gsap": "^3.10.2",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
