--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.2.2",
+    "react-cookies": "^0.1.1",
     "react-router-dom": "^6.2.2"
   }
 }
