--- a/travelapp-react/package.json
+++ b/travelapp-react/package.json
@@ -13,7 +13,9 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
