--- a/travelapp-react/package.json
+++ b/travelapp-react/package.json
@@ -14,10 +14,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
-    "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
