--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.2",
+    "react-rating": "^2.0.5",
     "react-redux": "^7.2.8",
     "react-router-dom": "^0.0.0-experimental-compat.6",
     "react-router-native": "^6.2.2",
